HTML und CSS von der Seite des SnakeSpiels angepasst

--- a/snake.css
+++ b/snake.css
@@ -31,3 +31,12 @@ html, body {
 #apples {
   max-height: 5em;
 }
+
+#snakePreStart {
+  max-width: 400px;
+  text-align: center;
+}
+
+#highscore, #laenge {
+  text-align: right;
+}
