Fehlerbehebungen ua. Angepasstes Layout in header und body. Einheitliches Design nach Vorlage der MainPage. Zentrieren div Elemente, Ändern von Bildern/ Farben, Ändern von Text, Schriftgröße und Farbe.

--- a/snakeMulti.css
+++ b/snakeMulti.css
@@ -1,42 +1,33 @@
 header {
-  background-color: black;
   padding-bottom: 1em;
 }
 
-#laengeSchriftOrange, #laenge2, #h2, #h2Schrift {
-  color: orange;
-}
-
-#laengeSchriftGruen, #laenge, #h1, #h1Schrift {
-  color: lime;
-}
-
-#ueberschrift {
-  color: rgb(21, 127, 251);
-}
-
 #start, #stopp {
-  background-color:  rgb(21, 127, 251);
+  margin-top: 1em;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  background-color: lime;
+  color: black;
+  box-shadow: 0 16px 60px rgba(0, 0, 0, 0.3);
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  width: 100%;
 }
 
 #h1, #h1Schrift, #h2, #h2Schrift {
   padding-top: 1em;
 }
-
 /*main*/
 main {
   padding-top: 1em;
-  background-image: url(img/snakeMultiplayer.png);
-  background-size: cover;
-  background-size: 100%;
-  background-repeat: no-repeat;
 }
 
 html, body {
   font-family: monospace;
-  maring: 0 !important;
+  color: black;
+  margin:: 0 !important;
   padding: 0;
-  background-color: black;
 }
 
 #controller, #Ueberschrift{
@@ -75,4 +66,44 @@ html, body {
 
 #controller, #ueberschrift{
   display: inline;
+}
+
+.bg {
+  background-color: #ff7700;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1600 900'%3E%3Cpolygon fill='%23cc0000' points='957 450 539 900 1396 900'/%3E%3Cpolygon fill='%23aa0000' points='957 450 872.9 900 1396 900'/%3E%3Cpolygon fill='%23d6002b' points='-60 900 398 662 816 900'/%3E%3Cpolygon fill='%23b10022' points='337 900 398 662 816 900'/%3E%3Cpolygon fill='%23d9004b' points='1203 546 1552 900 876 900'/%3E%3Cpolygon fill='%23b2003d' points='1203 546 1552 900 1162 900'/%3E%3Cpolygon fill='%23d3006c' points='641 695 886 900 367 900'/%3E%3Cpolygon fill='%23ac0057' points='587 900 641 695 886 900'/%3E%3Cpolygon fill='%23c4008c' points='1710 900 1401 632 1096 900'/%3E%3Cpolygon fill='%239e0071' points='1710 900 1401 632 1365 900'/%3E%3Cpolygon fill='%23aa00aa' points='1210 900 971 687 725 900'/%3E%3Cpolygon fill='%23880088' points='943 900 1210 900 971 687'/%3E%3C/svg%3E");
+  background-attachment: fixed;
+  background-size: cover;
+  padding-bottom: 50px;
+}
+
+#containerHeader {
+  background-color: rgb(244, 161, 57);
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  color: black;
+  box-shadow: 0 16px 60px rgba(0, 0, 0, 0.3);
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+}
+
+#containerMain {
+  background-color: rgb(244, 161, 57);
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  color: black;
+  box-shadow: 0 16px 60px rgba(0, 0, 0, 0.3);
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  height: 700px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#snakePreStart, #canvasSnake{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
