--- a/snake.css
+++ b/snake.css
@@ -65,11 +65,34 @@ html, body {
   padding-bottom: 50px;
 }
 
-.container{
-    background-color: rgb(244, 161, 57);
-    border: 1px solid rgba(0, 0, 0, 0.5);
-    color: black;
-    box-shadow: 0 16px 60px rgba(0, 0, 0, 0.3);
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
+#containerHeader {
+  background-color: rgb(244, 161, 57);
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  color: black;
+  box-shadow: 0 16px 60px rgba(0, 0, 0, 0.3);
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+}
+
+#containerMain {
+  background-color: rgb(244, 161, 57);
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  color: black;
+  box-shadow: 0 16px 60px rgba(0, 0, 0, 0.3);
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  height: 700px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#snakePreStart, #canvasSnake{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
