--- a/snakeColour.css
+++ b/snakeColour.css
@@ -36,6 +36,7 @@ html, body {
   cursor: pointer;
   background-color: rgb(174, 210, 227);
   width: 100%;
+  font-size: 15px;
 }
 
 #plus:hover, #minus:hover, #start:hover, #stopp:hover {
@@ -84,7 +85,7 @@ html, body {
 }
 
 #containerHeader {
-  background-color: rgb(244, 161, 57);
+  background-color: rgb(258, 169, 77);
   border: 1px solid rgba(0, 0, 0, 0.5);
   color: black;
   box-shadow: 0 16px 60px rgba(0, 0, 0, 0.3);
@@ -93,7 +94,7 @@ html, body {
 }
 
 #containerMain {
-  background-color: rgb(244, 161, 57);
+  background-color: rgb(258, 169, 77);
   border: 1px solid rgba(0, 0, 0, 0.5);
   color: black;
   box-shadow: 0 16px 60px rgba(0, 0, 0, 0.3);
