--- a/index.css
+++ b/index.css
@@ -7,6 +7,24 @@ html, main, body {
   height: 100%;
 }
 
+/*Allgemeine Gestalltung der Elemente*/
+.fas{
+  color: rgb(22, 148, 175);
+}
+
+.fas:hover{
+  color: rgb(100, 174, 195);
+}
+
+.nav-link {
+  -webkit-transition-duration: 0.4s;
+  transition-duration: 0.4s;
+}
+
+.nav-link:hover {
+  color: rgb(100, 174, 195)
+}
+
 /*Die Anordnung von header,body und footer */
 #container {
   min-height: 100%;
@@ -60,14 +78,6 @@ html, main, body {
   border-bottom-right-radius: 15px;
 }
 
-.fas{
-  color: rgb(22, 148, 175);
-}
-
-.fas:hover{
-  color: rgb(100, 174, 195);
-}
-
 /*Die Gestalltung für die Navigationsleiste für kleine Bildschirme */
 @media screen (max-width: 800px) {
   .nav-link {
@@ -97,7 +107,6 @@ html, main, body {
   border: 1px solid rgba(0, 0, 0, 0.5);
   border-radius: 10px;
   box-shadow: 0 16px 60px rgba(0, 0, 0, 0.3);
-  cursor: pointer;
 }
 
 .karte:hover {
