--- a/snakeMulti.css
+++ b/snakeMulti.css
@@ -2,7 +2,8 @@ header {
   padding-bottom: 1em;
 }
 
-#start, #stopp {
+/*Gestalltung der Knöpfe im Header*/
+#start, #stop {
   margin-top: 1em;
   border: 1px solid rgba(0, 0, 0, 0.5);
   width: 100%;
@@ -19,7 +20,7 @@ header {
   font-size: 15px;
 }
 
-#plus:hover, #minus:hover, #start:hover, #stopp:hover {
+#plus:hover, #minus:hover, #start:hover, #stop:hover {
   background-color: rgb(220, 234, 244);
   width: 100%;
 }
@@ -52,6 +53,7 @@ html, body {
   padding: 0;
 }
 
+/*Farbanpassung des Kontroller im Header*/
 .fas{
   color: rgb(22, 148, 175);
 }
@@ -60,6 +62,7 @@ html, body {
   color: rgb(100, 174, 195);
 }
 
+/*Größe des Apfel Logos im Header*/
 #apples {
   max-height: 5em;
 }
@@ -81,6 +84,7 @@ html, body {
   display: inline;
 }
 
+/*Hintergrund setzen*/
 .bg {
   background-color: #ff7700;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1600 900'%3E%3Cpolygon fill='%23cc0000' points='957 450 539 900 1396 900'/%3E%3Cpolygon fill='%23aa0000' points='957 450 872.9 900 1396 900'/%3E%3Cpolygon fill='%23d6002b' points='-60 900 398 662 816 900'/%3E%3Cpolygon fill='%23b10022' points='337 900 398 662 816 900'/%3E%3Cpolygon fill='%23d9004b' points='1203 546 1552 900 876 900'/%3E%3Cpolygon fill='%23b2003d' points='1203 546 1552 900 1162 900'/%3E%3Cpolygon fill='%23d3006c' points='641 695 886 900 367 900'/%3E%3Cpolygon fill='%23ac0057' points='587 900 641 695 886 900'/%3E%3Cpolygon fill='%23c4008c' points='1710 900 1401 632 1096 900'/%3E%3Cpolygon fill='%239e0071' points='1710 900 1401 632 1365 900'/%3E%3Cpolygon fill='%23aa00aa' points='1210 900 971 687 725 900'/%3E%3Cpolygon fill='%23880088' points='943 900 1210 900 971 687'/%3E%3C/svg%3E");
@@ -114,6 +118,7 @@ html, body {
   transform: translate(-50%, -50%);
 }
 
+/*Position des Spielfelds*/
 #snakePreStart, #canvasSnake{
   position: fixed;
   top: 50%;
