Hinzufügen von einer Spielzeit (5 Minuten) beim MultiplayerSpiel und ermittlung des Gewinners. Je nach Gewinner wird ein anderes Bild dargestellt, wer gewonnen hat.

--- a/index.css
+++ b/index.css
@@ -142,3 +142,8 @@ img {
   background-size: cover;
   padding-bottom: 50px;
 }
+
+#link1, #link2, #link3 {
+  color: #000000;
+  text-decoration: none;
+}
