--- a/snake.css
+++ b/snake.css
@@ -2,6 +2,11 @@ header {
   padding-bottom: 1em;
 }
 
+/*main*/
+main {
+  padding-top: 1em;
+}
+
 html, body {
   font-family: monospace;
   margin: 0 !important;
@@ -67,7 +72,7 @@ html, body {
 }
 
 #laenge, #laengeSchrift, #controller, #ueberschrift {
-  padding-top: 1em;
+  padding-top: 0.5em;
 }
 
 #controller, #ueberschrift {
@@ -90,6 +95,7 @@ html, body {
   box-shadow: 0 16px 60px rgba(0, 0, 0, 0.3);
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
+  margin-bottom: 1em;
 }
 
 #containerMain {
@@ -119,10 +125,8 @@ html, body {
 
 main {
   text-align: center;
-  top: 180;
 }
 
 header {
   position: relative;
-  height: 180px;
 }
